I am refactoring the code to a new architecture.